-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.2
-
None
-
-
450f79ea1 (dev), 75adbe616 (6.8)
There are Qt warnings which I regularly observe in users' reports on our automated tracking system, since we are processing almost all Qt warning messages via our custom message handler:
DirectWrite: CreateFontFaceFromHDC() failed (Indicates an error in an input file such as a font file.) for QFontDef(Family="MS Serif", stylename=Regular, pointsize=8.25, pixelsize=11, styleHint=5, weight=400, stretch=100, hintingPreference=0) LOGFONT("MS Serif", lfWidth=0, lfHeight=-11) dpi=96
DirectWrite: CreateFontFaceFromHDC() failed (Indicates an error in an input file such as a font file.) for QFontDef(Family="MS Sans Serif", stylename=Regular, pointsize=8.25, pixelsize=13, styleHint=5, weight=400, stretch=100, hintingPreference=0) LOGFONT("MS Sans Serif", lfWidth=0, lfHeight=-13) dpi=96
DirectWrite: CreateFontFaceFromHDC() failed (Indicates an error in an input file such as a font file.) for QFontDef(Family="Fixedsys", stylename=Regular, pointsize=10.5, pixelsize=16, styleHint=5, weight=400, stretch=100, hintingPreference=0) LOGFONT("Fixedsys", lfWidth=0, lfHeight=-16) dpi=96
etc...
They are a bit annoying and don't seem very useful, so I suggest at least lowering their severity to QtDebugMsg and/or making them categorized.
- relates to
-
QTBUG-79140 [REG 5.13.0 -> 5.14.0]OTF fonts don't work correctly
-
- Closed
-
-
QTBUG-57180 DirectWrite: CreateFontFaceFromHDC() failed
-
- Closed
-
-
QTBUG-99705 Error when attempting to use some unicode characters: CreateFontFaceFromHDC() failed (Indicates an error in an input file such as a font file.)"
-
- Closed
-
-
QTBUG-129092 "OpenType support missing for..." Qt warnings
-
- Closed
-
| For Gerrit Dashboard: QTBUG-129118 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 592145,3 | QWindowsFontDatabase: use categorized logging more | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 592269,2 | QWindowsFontDatabase: use categorized logging more | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |