QWindowsFontDatabase: use categorized logging more

Use "qt.qpa.fonts" logging category for the rest warning messages in
QWindowsFontDatabase.

Task-number: QTBUG-129118
Pick-to: 6.8
Change-Id: I4e84af29fb6385142285954b0f508b412823c679
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>